# pdfchunk

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.config/: .markdownlint.jsonc  .prettierignore  ruff.toml
docs/: interfaces.md
src/pdfchunk/: __main__.py  cli.py  exceptions.py  index_generator.py  models.py  parser.py  summarizer.py
src/pdfchunk/index_generators/: __init__.py  default_index_generator.py
src/pdfchunk/parsers/: __init__.py  pymupdf4llm_parser.py
src/pdfchunk/summarizers/: __init__.py  dummy.py  litellm.py
tests/: conftest.py  test_cli.py  test_index_generator.py  test_models.py  test_parser.py  test_summarizer.py
